# chip8-rs

./: .gitignore  Cargo.toml  README.md
chip8_core/: Cargo.toml  lib.rs
chip8_core/src/: core.rs  instructions.rs  lib.rs  peripherals.rs
chip8_core/src/core/: instructions.rs
chip8_tools/: Cargo.toml
chip8_tools/src/: util.rs
chip8_tools/src/util/: minifb.rs
src/: core.rs  lib.rs  main.rs  peripherals.rs  util.rs
src/core/: instructions.rs
src/tools/: debug.rs  disasm.rs
src/util/: minifb.rs
